src/test/resources/purescript_examples/failing/InstanceExport.purs.psi
Purescript File
  PsiElement(whitespace)('-- @shouldFailWith TransitiveExportError\n')
  PSProgramImpl(Program)
    PSModuleImpl(Module)
      PsiElement(module)('module')
      PsiElement(whitespace)(' ')
      PSProperNameImpl(ModuleName)
        PSProperNameImpl(Qualified)
          PsiElement(proper name)('Test')
        PsiElement(whitespace)(' ')
      PsiElement(where)('where')
      PsiElement(whitespace)('\n\n')
      PSNamedBinderImpl(NamedBinder)
        <empty list>
      PSImportDeclarationImpl(ImportDeclaration)
        PsiElement(import)('import')
        PsiElement(whitespace)(' ')
        PSProperNameImpl(ImportModuleName)
          PSProperNameImpl(Qualified)
            PsiElement(proper name)('InstanceExport')
          PsiElement(whitespace)('\n')
      PSNamedBinderImpl(NamedBinder)
        <empty list>
      PSImportDeclarationImpl(ImportDeclaration)
        PsiElement(import)('import')
        PsiElement(whitespace)(' ')
        PSProperNameImpl(ImportModuleName)
          PSProperNameImpl(Qualified)
            PsiElement(proper name)('Prelude')
          PsiElement(whitespace)('\n\n')
      PSValueDeclarationImpl(ValueDeclaration)
        PSIdentifierImpl(identifier)
          PsiElement(identifier)('test')
          PsiElement(whitespace)(' ')
        PSNamedBinderImpl(NamedBinder)
          <empty list>
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PSValueImpl(Value)
          PSPrefixValueImpl(PrefixValue)
            PSVarImpl(Var)
              PSProperNameImpl(Qualified)
                PSIdentifierImpl(identifier)
                  PsiElement(identifier)('f')
                  PsiElement(whitespace)(' ')
          PSIdentInfixImpl(IdentInfix)
            PSProperNameImpl(Qualified)
              PsiElement(operator)('$')
              PsiElement(whitespace)(' ')
          PSValueImpl(Value)
            PSPrefixValueImpl(PrefixValue)
              PSIdentifierImpl(Constructor)
                PSProperNameImpl(Qualified)
                  PSProperNameImpl(ProperName)
                    PsiElement(proper name)('S')
                    PsiElement(whitespace)(' ')
              PSStringLiteralImpl(StringLiteral)
                PsiElement(string)('"Test"')
                PsiElement(whitespace)('\n')
